samples/kube/playground-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-v1
  labels:
    app: playground
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: playground
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: playground
        version: v1
    spec:
      serviceAccountName: playground
      containers:
        - name: playground
          image: docker.io/apodemakeles/playground:4bfb453
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: playground
  labels:
    app: playground
    service: playground
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: playground
