samples/kube/fault-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: playground
spec:
  hosts:
    - playground
  http:
    - route:
      - destination:
         host: playground
         subset: v1
      fault:
#        delay:
#          percentage:
#            value: 100
#          fixedDelay: 5s
        abort:
          percentage:
            value: 100
          httpStatus: 501
