samples/kube/hash-breaking-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: playground
spec:
  host: playground
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: User
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 10s
      baseEjectionTime: 10m
      maxEjectionPercent: 100
  subsets:
    - name: v1
      labels:
        version: v1
