samples/kube/lb-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: playground
spec:
  host: playground
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN # LEAST_CONN
  subsets:
    - name: v1
      labels:
        version: v1
