samples/kube/networking-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: playground
spec:
  hosts:
    - playground
  http:
  - route:
    - destination:
        host: playground
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: playground
spec:
  host: playground
  subsets:
    - name: v1
      labels:
        version: v1
---
