samples/kube/outlier-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: playground
spec:
  host: playground
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 10m
      maxEjectionPercent: 10
      minHealthPercent: 25
  subsets:
    - name: v1
      labels:
        version: v1
